--- a/product-categories/bedroom.html
+++ b/product-categories/bedroom.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Butingthings - Bedroom</title>
+    <title>Our Home - Bedroom</title>
 
     <link rel="stylesheet" href="../product-shopping.css" />
     <link rel="stylesheet" href="product-categories.css" />
@@ -15,9 +15,9 @@
 
 
             <header>
-                <div class="header-title">Butingthings</div>
+                <div class="header-title">Our Home</div>
                 <div class="header-nav">
-                    <a href="../home.html">
+                    <a href="../index.html">
                         <span>
                             HOME
                         </span>
