--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Butingthings - Kitchen</title>
+    <title>Our Home - Kitchen</title>
 
     <link rel="stylesheet" href="product-shopping.css" />
 
@@ -37,7 +37,7 @@
             <header>
                 <div class="header-title">Butingthings</div>
                 <div class="header-nav">
-                    <a href="home.html">
+                    <a href="index.html">
                         <span>
                             HOME
                         </span>
