--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div id="main-container">
 
             <header>
-                <div class="header-title">Butingthings</div>
+                <div class="header-title">Our Home</div>
                 <div class="header-nav">
-                    <a href="home.html">
+                    <a href="index.html">
                         <span>
                             HOME
                         </span>
