--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <div id="main-container">
 
             <header>
-                <div class="header-title">Butingthings</div>
+                <div class="header-title">Our Home</div>
                 <div class="header-nav">
                     <a href="index.html">
                         <span>
