--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Our Home - Kitchen</title>
+    <title>Our Home - 'Contacts'</title>
 
     <link rel="stylesheet" href="product-shopping.css" />
 
@@ -75,7 +75,7 @@
 
             <div id="about-description"> 
                 <p>
-                    For orders please contact the detail below. Discounts for bullk orders. Use code #FREEToday for 15% off on total billing.
+                    For orders please contact the details below. Use code #FREEToday for 15% off on total billing.
                 </p>
             </div>
 
