--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Our Home - 'Contacts'</title>
+    <title>Our Home - Contacts</title>
 
     <link rel="stylesheet" href="product-shopping.css" />
 
