--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             </div>
 
             <div id="contact-section">
-                <div>email: siaprincessm@Butingthings.com.ph</div>
+                <div>email: siaprincessm@ourhome.ph</div>
                 <div>phone: +639959900165</div>
             </div>
 
